# KNNClassifier

./: CMakeLists.txt  ChebyshevDistance.cpp  ChebyshevDistance.hpp  Classifier.cpp  Classifier.hpp  Distance.cpp  Distance.hpp  DistanceCalc.cpp  DistanceCalc.hpp  DistancesData.cpp  DistancesData.hpp  EuclideanDistance.cpp  EuclideanDistance.hpp  FileConverter.cpp  FileConverter.hpp  Flower.cpp  Flower.hpp  FourDPoint.cpp  FourDPoint.hpp  ManhattanDistance.cpp  ManhattanDistance.hpp  NPoint.hpp  Point.cpp  Point.hpp  main.cpp  nPoint.cpp  nPoint.hpp  readme.md
source/: main.cpp
source/output/: chebyshev_output.csv
source/srcDistances/: ChebyshevDistance.cpp  DistanceCalc.cpp  DistanceCalc.hpp  DistancesData.cpp  DistancesData.hpp  EuclideanDistance.cpp  ManhattanDistance.cpp
source/srcDistances/srcDistanceCalculators/: ChebyshevDistance.cpp  ChebyshevDistance.hpp  EuclideanDistance.cpp  EuclideanDistance.hpp  ManhattanDistance.cpp  ManhattanDistance.hpp
source/srcIO/: FileConverter.cpp  FileConverter.hpp
source/srcKnnClassifier/: Classifier.cpp  Classifier.hpp
